<resources>

    <!-- App -->
    <string name="app_name">Calculadora Salarial</string>

    <!-- Pantalla de selección de rubro -->
    <string name="select_rubro_title">Seleccione el rubro</string>
    <string name="rubro_bodega">Bodega</string>
    <string name="rubro_vina">Viña</string>

    <!-- Pantalla principal -->
    <string name="rubro">Rubro</string>
    <string name="titulo_haberes">Haberes</string>
    <string name="titulo_descuentos">Descuentos</string>
    <string name="titulo_resultados">Resultados</string>

    <!-- Labels de Haberes -->
    <string name="categoria">Categoría</string>
    <string name="pregunta_titulo">¿título?</string>
    <string name="titulo_si">Sí</string>
    <string name="titulo_no">No</string>
    <string name="pregunta_mes_completo">¿Trabajó el mes completo?</string>
    <string name="antiguedad">Antigüedad</string>
    <string name="si">Sí</string>
    <string name="no">No</string>
    <string name="Horas_extra_al_50">Horas extra al %50</string>
    <string name="Horas_extra_al_100">Horas extra al %100</string>

    <!-- Labels de Descuentos -->
    <string name="Adelanto">Adelanto / Vino retirado</string>

    <!-- Botones -->
    <string name="btn_calcular">Calcular</string>
    <string name="btn_limpiar">Limpiar</string>

    <!-- Resultados -->
    <string name="resultado_total_haberes">Total haberes</string>
    <string name="resultado_total_descuentos">Total descuentos</string>
    <string name="resultado_sueldo_liquido">Total</string>

    <string name="compartir_esta_calculadora">Compartir esta calculadora</string>
    <string name="Total">Total</string>

    <!-- Array de Categorías para el Spinner -->
    <string-array name="categorias_array">
        <item>Op. Comun</item>
        <item>Op. Especializado</item>
        <item>Op. Calificado</item>
        <item>Op. Foguista</item>
    </string-array>

    <string name="titulo_indemnizacion">Calcular Indemnización</string>
    <string name="fecha_ingreso">Fecha de ingreso</string>
    <string name="fecha_egreso">Fecha de egreso</string>
    <string name="mejor_sueldo">Mayor sueldo</string>
    <string name="seleccionar_fecha">Seleccionar fecha</string>
    <string name="btn_calcular_indemnizacion">Calcular Indemnización</string>
    <string name="titulo_resultados_indemnizacion">Resultado Estimado</string>
    <string name="resultado_antiguedad">Antigüedad:</string>
    <string name="resultado_indemnizacion_antiguedad">Indemnización por antigüedad:</string>
    <string name="resultado_preaviso">Preaviso:</string>
    <string name="resultado_aguinaldo_proporcional">Aguinaldo proporcional:</string>
    <string name="resultado_vacaciones_proporcionales">Vacaciones proporcionales:</string>
    <string name="resultado_total_estimado">Total estimado:</string>
    <string name="tipo_de_salida">Tipo de salida laboral</string>
    <string name="despido_sin_causa">Despido sin causa</string>
    <string name="renuncia">Renuncia</string>
    <string name="calcular_nmi_salario_nbodega">CALCULAR SALARIO DE BODEGA</string>
    <string name="titulo_grande_indemnizacion">CALCULAR\nMI\nINDEMNIZACIÓN</string>
    <string name="calcular_salario_de_bodega">Calcular Salario de Bodega</string>
    <string name="bienvenido_a_nelige_qu_deseas_calcular">¡Bienvenido/a!\nElige qué deseas calcular</string>
    <string name="calcular_indemnizaci_n">Calcular Indemnización</string>


</resources>
